# jieba-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  package-lock.json  package.json
src/: compact.rs  lib.rs  main.rs  trie.rs
src/analyse/: mod.rs  tfidf.rs
src/finalseg/: mod.rs  prob_emit.rs  prob_start.p  prob_start.rs  prob_trans.p  prob_trans.rs
src/posseg/: char_state_tap.rs  mod.rs  prob_emit.rs  prob_start.p  prob_trans.p  viterbi.rs
tests/: demo.rs  test_userdict.rs
