[package]
name = "jiebars"
version = "0.1.0"
authors = ["SunDoge <384813529@qq.com>"]

[dependencies]
regex = "0.2"
log = "0.3"
env_logger = "0.3"
num_cpus = "1.0"
serde_json = "1.0"
lazy_static = "0.2"
clap = "2.26.2"
md5 = "0.3.5"
parking_lot = "0.4.8"
maplit = "0.1.5"
serde = "*"
serde-pickle = "*"